# StockAnalyzer

./: LICENSE  Pasted--Ohhh-you-re-thinking-big-I-love-it-If-you-want-your-website-app-to-be-worth-50-million-we-ve-1744942602375.txt  Pasted-Here-s-an-overview-of-Apple-Inc-AAPL-stock-including-a-financial-summary-a-downloadable-CSV-of--1744332499719.txt  Pasted-It-appears-that-your-Streamlit-dashboard-is-still-displaying-the-message-You-need-to-enable-JavaSc-1744334712906.txt  README.md  ai_utils.py  app.py  database.py  gamification.py  monetization.py  pyproject.toml  replit.nix  reset_db.py  theme_manager.py  utils.py
data/: feature_impressions.json  stock_dashboard.db
pages/: achievements.py  ai_advisor.py  ai_stock_screener.py  portfolio_tracker.py  premium.py  price_alerts.py  sentiment_dashboard.py
